--- a/views/review_monitor.html
+++ b/views/review_monitor.html
@@ -32,21 +32,19 @@
         <div class="row">
           <form class="col s12">
             <div class="row">
-              <div class="input-field col l6">
+              <div class="input-field col s3">
                 <input id="last_name" type="text" class="validate">
                 <label for="last_name">Last Name</label>
               </div>
-              <div class="input-field col l6">
+              <div class="input-field col s3">
                 <input id="first_name" type="text" class="validate">
                 <label for="first_name">First Name</label>
               </div>
-            </div>
-            <div class="row">
-              <div class="input-field col l6">
+              <div class="input-field col s2">
                 <input id="uin" type="text" class="validate" data-length="10">
                 <label for="uin">UIN</label>
               </div>
-              <div class="input-field col l6">
+              <div class="input-field col s2">
                 <select id="year">
                   <option value="" disabled selected>Choose Year</option>
                 </select>
@@ -86,7 +84,9 @@
               <td> Pass (2/3)</td>
               <td> No </td>
               <td> <a href="#"> View </a> </td>
-              <th class="centering"> <i class="material-icons">pageview</i> <i class="material-icons">edit</i> <i class="material-icons">delete</i> </th>
+              <th><a class="modal-trigger" href="#view-student-info"> <i class="material-icons">pageview</i></a>
+                 <a href="#" onclick="EditReview()"><i class="material-icons">edit</i> </a>
+                 <a href="#"><i class="material-icons">delete</i> </a></th>
             </tr>
             <tr>
               <td>830000049</td>
@@ -97,10 +97,67 @@
               <td> Fail (1/3) </td>
               <td> Yes </td>
               <td> <a href="#"> View </a> </td>
+              <th> <i class="material-icons">pageview</i> <i class="material-icons">edit</i> <i class="material-icons">delete</i> </th>
             </tr>
           </tbody>
         </table>
 
+        <!-- Modal Structure -->
+        <div id="view-student-info" class="modal modal-fixed-footer">
+          <div class="modal-content">
+            <h4>Student Information</h4>
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s3">
+                  <input id="ln" type="text" value="Pendurkar" disabled>
+                  <label for="ln">Last Name</label>
+                </div>
+                <div class="input-field col s3">
+                  <input id="fn" type="text" class="validate" value = "Sumedh" disabled>
+                  <label for="fn">First Name</label>
+                </div>
+                <div class="input-field col s2">
+                  <input id="uin_" type="text" class="validate" value="830000048" disabled>
+                  <label for="uin_">UIN</label>
+                </div>
+                <div class="input-field col s4">
+                  <input id="email" type="text" class="validate" value="sumedhpendurkar@tamu.edu" disabled>
+                  <label for="email">Email</label>
+                </div>
+              </div>
+              <div class='row'>
+                <div class="input-field col s2">
+                  <input id="start-sem" type="text" class="validate" value="Fall 2019" disabled>
+                  <label for="uin">Start Semester</label>
+                </div>
+                <div class="input-field col s2">
+                  <input id="qual" type="text" class="validate" value="No (1/3)" disabled>
+                  <label for="uin">Qual Exam</label>
+                </div>
+                <div class="input-field col s2">
+                  <input id="degree-plan" type="text" class="validate" value="Yes" disabled>
+                  <label for="uin">Degree Plan Filed?</label>
+                </div>
+                <div class="input-field col s2">
+                  <input id="prelim-date" type="text" class="validate" value="02/02/2021" disabled>
+                  <label for="uin">Prelim Date</label>
+                </div>
+                <div class="input-field col s2">
+                  <input id="proposal-date" type="text" class="validate" value="02/04/2021" disabled>
+                  <label for="uin">Proposal Date</label>
+                </div>
+                <div class="input-field col s2">
+                  <input id="defense-date" type="text" class="validate" value="04/04/2021" disabled>
+                  <label for="uin">Final Defense Date</label>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+          </div>
+        </div>
 
 
       <!--JavaScript at end of body for optimized loading-->
