a basic backbone structure of all views; integration of add review view

--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a href="#">Login as Student</a>
+                  <a href="student_info.html">Login as Student</a>
                   <a href="review_monitor.html">Login as Faculty</a>
                 </div>
               </div>
