--- a/views/review_monitor.html
+++ b/views/review_monitor.html
@@ -8,18 +8,17 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <!--Let browser know website is optimized for mobile-->
       <link rel="stylesheet" href="css/app.css">
+      <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
-    <body>
+    <body onload="load_monitor()">
       <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper tamu-navbar">
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li class="active"><a href="#">Review Monitor</a></li>
-              <li><a href="#">Review Deadlines</a></li>
-              <li><a href="#">Review Setup</a></li>
               <li><a href="index.html">Logout</a></li>
             </ul>
           </div>
@@ -69,6 +68,8 @@
                 <th> Start Semester </th>
                 <th> Qual Exam </th>
                 <th> Degree Plan Submitted?</th>
+                <th> Student Report </th>
+                <th> Improvement Plan </th>
                 <th> CV </th>
                 <th> Actions </th>
             </tr>
@@ -84,9 +85,10 @@
               <td> Pass (2/3)</td>
               <td> No </td>
               <td> <a href="#"> View </a> </td>
+              <td> NA </td>
+              <td> <a href="#"> View </a> </td>
               <th><a class="modal-trigger" href="#view-student-info"> <i class="material-icons">pageview</i></a>
-                 <a href="#" onclick="EditReview()"><i class="material-icons">edit</i> </a>
-                 <a href="#"><i class="material-icons">delete</i> </a></th>
+                 <a href="#upload-review" class='modal-trigger'><i class="material-icons">edit</i> </a>
             </tr>
             <tr>
               <td>830000049</td>
@@ -97,7 +99,9 @@
               <td> Fail (1/3) </td>
               <td> Yes </td>
               <td> <a href="#"> View </a> </td>
-              <th> <i class="material-icons">pageview</i> <i class="material-icons">edit</i> <i class="material-icons">delete</i> </th>
+              <td> <a href="#"> View </a> </td>
+              <td> <a href="#"> View </a> </td>
+              <th> <i class="material-icons">pageview</i> <i class="material-icons">edit</i> </th>
             </tr>
           </tbody>
         </table>
@@ -159,10 +163,254 @@
           </div>
         </div>
 
+        <!-- Modal Structure -->
+        <div id="upload-review" class="modal modal-fixed-footer">
+          <div class="modal-content">
+            <h4>Review for Sumedh Dattaguru</h4>
+            <form class="col s12">
+              <table class="highlight centered">
+
+                <thead>
+                <tr>
+                    <th>Review Year</th>
+                    <th>Open Date</th>
+                    <th>Review Deadline</th>
+                </tr>
+              </thead>
+
+                <tbody>
+                <tr>
+                  <td>2014</td>
+                  <td>-</td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td>2015</td>
+                  <td>-</td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td>2016</td>
+                  <td>-</td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td>2017</td>
+                  <td>-</td>
+                  <td>-</td>
+                </tr>
+              </tbody>
+
+              </table>
+
+              <br>
+
+              <div class="row">
+
+                <div class="col s4">
+                  <p align="center">
+                    <label>
+                      <input type="checkbox" checked="checked" disabled="disabled" />
+                      <span>Decision Letter</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="center">
+                    <label>
+                      <input type="checkbox" disabled="disabled" />
+                      <span>Curriculum Vitae</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="center">
+                    <label>
+                      <input type="checkbox" disabled="disabled" />
+                      <span>Student Report</span>
+                    </label>
+                  </p>
+                </div>
+
+              </div>
+
+              <div class="row">
+
+                <div class="col s6">
+                  <h6>Comments For Student</h6>
+                  <textarea id="textarea1" class="materialize-textarea"></textarea>
+                </div>
+
+                <div class="col s6">
+                  <h6>Comments For Faculty</h6>
+                  <textarea id="textarea2" class="materialize-textarea"></textarea>
+                </div>
+
+              </div>
+
+              <div class="row">
+
+                <div class="input-field col s12">
+                  <select>
+                    <option disabled selected>Choose your option</option>
+                    <option>Not Rated (X)</option>
+                    <option >Unsatisfactory (U)</option>
+                    <option >Needs Improvement (N)</option>
+                    <option >Unsatisfactory (S)</option>
+                  </select>
+                  <label>Rating</label>
+                </div>
+
+              </div>
+
+              <div class="row">
+                Notes (select all that apply)
+              </div>
+              <div class="row">
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Needs to improve grade</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>No student report available</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox" checked="false"/>
+                      <span>Misconduct</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Needs to pass qualifer exam</span>
+                    </label>
+                  </p>
+                </div>
+
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Needs to find advisor</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Need to file degree plan</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Need to do prelim</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Need to do submit proposal</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Need to do finish soon</span>
+                    </label>
+                  </p>
+                </div>
+
+                <div class="col s4">
+                  <p align="left">
+                    <label>
+                      <input type="checkbox"/>
+                      <span>Need to do file degree plan</span>
+                    </label>
+                  </p>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+          </div>
+        </div>
+
+        <div id="create-review-year" class="modal modal-fisxed-footer">
+          <div class="modal-content">
+            <h4>Create a Review Year</h4>
+            <div class="row">
+
+            <div class="input-field col s2" align="center">
+              <select id="year2" align="center">
+                <option value="" disabled selected>2019-2020</option>
+              </select>
+              <label> Review Year</label>
+            </div>
+          </div>
+          </div>
+          <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Confirm</a>
+          </div>
+        </div>
+
+        <div class="fixed-action-btn">
+        <a class="btn-floating btn-large tamu-navbar modal-trigger" href="#create-review-year">
+          <i class="large material-icons">mode_edit</i>
+        </a>
+      </div>
+
 
       <!--JavaScript at end of body for optimized loading-->
       <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script>
+      var d = new Date();
+      for(y = d.getFullYear(); y > 1850; y--) {
+              var optn = document.createElement("OPTION");
+              optn.text = y;
+              optn.value = y;
+
+              if (y == d.getFullYear()) {
+                  optn.selected = true;
+              }
+              document.getElementById('year').options.add(optn);
+      }
+      </script>
       <script src="js/app.js"></script>
     </body>
   </html>
