--- a/views/student_info.html
+++ b/views/student_info.html
@@ -108,6 +108,11 @@
             </div>
           </div>
 
+          <div class="row">
+            <button class="btn waves-effect waves-light" type="submit" name="action"> View CV
+            </button>
+          </div>
+
         <div class="row">
           <div class="file-field input-field s3">
             <div class="btn">
