--- a/views/student_info.html
+++ b/views/student_info.html
@@ -6,9 +6,14 @@
       <!--Import materialize.css-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <!--Let browser know website is optimized for mobile-->
-      <link rel="stylesheet" href="css/app.css">
+      <?!= include('css'); ?>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <script>
+        window.onload = function(e)  {
+          resetProfileFields();
+        };
+      </script>
     </head>
 
     <body>
@@ -26,7 +31,6 @@
       </div>
 
       <div class="container">
-        <form class="col s12">
           <div class="row">
             <div class="input-field col s3">
               <input id="ln" type="text">
@@ -41,7 +45,7 @@
               <label for="uin_">UIN</label>
             </div>
             <div class="input-field col s4">
-              <input id="email" type="text" class="validate" value="sumedhpendurkar@tamu.edu" disabled>
+              <input id="email" type="text" class="validate" disabled>
               <label for="email">Email</label>
             </div>
           </div>
@@ -127,17 +131,15 @@
 
         <div class="row">
           <div class="center">
-            <button class="btn waves-effect waves-light cancel" type="submit" name="action"> Discard
+            <button class="btn waves-effect waves-light cancel" onclick="resetProfileFields()"> Discard
             </button>
-            <button class="btn waves-effect waves-light" type="submit" name="action"> Update!
+            <button class="btn waves-effect waves-light" onclick="updateClicked()"> Update!
             </button>
           </div>
         </div>
 
-        </form>
-
 
         <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="js/app.js"></script>
+        <?!= include('javascript'); ?>
       </body>
